Removed Loading component from HUD and fixed overflow bug

--- a/src/game/HUD/styles.module.css
+++ b/src/game/HUD/styles.module.css
@@ -11,62 +11,6 @@ body {
   -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
-.loadingScene {
-  justify-content: center;
-  align-items: center;
-  background-size: cover;
-  background: #000;
-  display: flex;
-  flex-direction: column;
-  color: black;
-  height: 100%;
-  height: 100vh;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  position: absolute;
-}
-
-.backgroundImage{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  width: 100vw;
-  opacity: 0.8;
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
-  z-index: 1;
-}
-
-.loadingText{
-  position: absolute;
-  font-size: 1rem;
-  color: white;
-  width: 500px;
-  z-index: 2;
-  bottom:60px;
-  right:30px;
-}
-
-.progressBar {
-  background: rgba(255, 255, 255, 0.1);
-  justify-content: flex-start;
-  align-items: center;
-  position: absolute;
-  bottom:30px;
-  right:30px;
-  height: 20px;
-  width: 500px;
-  z-index: 2;
-}
-
-.progressValue {
-  box-shadow: 0 10px 40px -10px #fff;
-  background: #fff;
-  height: 20px;
-  width: 0;
-}
-
 .hidden {
   visibility: hidden;
   opacity: 0;
